mp8/minijavaparse.output
   0  $accept : %entry% $end

   1  program : classdecls

   2  classdecls : classdecl
   3             | classdecls classdecl

   4  classdecl : CLASS IDENTIFIER LBRACE staticvardecls methoddecls RBRACE
   5            | CLASS IDENTIFIER EXTENDS IDENTIFIER LBRACE staticvardecls methoddecls RBRACE

   6  staticvardecls :
   7                 | staticvardecls staticvardecl

   8  staticvardecl : vardecl
   9                | STATIC vardecl

  10  vardecls :
  11           | vardecls vardecl

  12  vardecl : exp_type IDENTIFIER SEMICOLON

  13  methoddecls :
  14              | methoddecls methoddecl

  15  methoddecl : PUBLIC exp_type IDENTIFIER LPAREN params RPAREN LBRACE vardecls RETURN expression SEMICOLON RBRACE
  16             | PUBLIC exp_type IDENTIFIER LPAREN params RPAREN LBRACE vardecls stmts1 RETURN expression SEMICOLON RBRACE

  17  params :
  18         | exp_type IDENTIFIER more_params

  19  more_params :
  20              | COMMA exp_type IDENTIFIER more_params

  21  exp_type : BOOLEAN
  22           | FLOAT
  23           | INT
  24           | IDENTIFIER

  25  stmts1 : stmt
  26         | stmts1 stmt

  27  stmts0 :
  28         | stmts0 stmt

  29  stmt : LBRACE stmts0 RBRACE
  30       | IDENTIFIER EQ expression SEMICOLON
  31       | IF LPAREN expression RPAREN stmt ELSE stmt
  32       | IF LPAREN expression RPAREN stmt
  33       | WHILE LPAREN expression RPAREN stmt
  34       | IDENTIFIER DOT IDENTIFIER DOT IDENTIFIER LPAREN expression RPAREN SEMICOLON
  35       | BREAK SEMICOLON
  36       | CONTINUE SEMICOLON
  37       | IDENTIFIER LBRACK expression RBRACK EQ expression SEMICOLON

  38  expression : expression AND expression
  39             | expression OR expression
  40             | expression LT expression
  41             | expression GT expression
  42             | expression EQEQ expression
  43             | expression LTEQ expression
  44             | expression GTEQ expression
  45             | expression PLUS expression
  46             | expression MINUS expression
  47             | expression MULT expression
  48             | expression DIV expression
  49             | expression DOT IDENTIFIER
  50             | expression DOT IDENTIFIER LPAREN args RPAREN
  51             | INTEGER_LITERAL
  52             | FLOAT_LITERAL
  53             | STRING_LITERAL
  54             | NULL_LITERAL
  55             | BOOLEAN_LITERAL
  56             | IDENTIFIER
  57             | THIS
  58             | NEW IDENTIFIER LPAREN RPAREN
  59             | NOT expression
  60             | LPAREN expression RPAREN

  61  args :
  62       | expression more_args

  63  more_args :
  64            | COMMA expression more_args

  65  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (65)

	CLASS  shift 3
	.  error

	program  goto 4
	classdecls  goto 5
	classdecl  goto 6


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	classdecl : CLASS . IDENTIFIER LBRACE staticvardecls methoddecls RBRACE  (4)
	classdecl : CLASS . IDENTIFIER EXTENDS IDENTIFIER LBRACE staticvardecls methoddecls RBRACE  (5)

	IDENTIFIER  shift 7
	.  error


state 4
	%entry% : '\001' program .  (65)

	.  reduce 65


state 5
	program : classdecls .  (1)
	classdecls : classdecls . classdecl  (3)

	CLASS  shift 3
	$end  reduce 1

	classdecl  goto 8


state 6
	classdecls : classdecl .  (2)

	.  reduce 2


state 7
	classdecl : CLASS IDENTIFIER . LBRACE staticvardecls methoddecls RBRACE  (4)
	classdecl : CLASS IDENTIFIER . EXTENDS IDENTIFIER LBRACE staticvardecls methoddecls RBRACE  (5)

	EXTENDS  shift 9
	LBRACE  shift 10
	.  error


state 8
	classdecls : classdecls classdecl .  (3)

	.  reduce 3


state 9
	classdecl : CLASS IDENTIFIER EXTENDS . IDENTIFIER LBRACE staticvardecls methoddecls RBRACE  (5)

	IDENTIFIER  shift 11
	.  error


state 10
	classdecl : CLASS IDENTIFIER LBRACE . staticvardecls methoddecls RBRACE  (4)
	staticvardecls : .  (6)

	.  reduce 6

	staticvardecls  goto 12


state 11
	classdecl : CLASS IDENTIFIER EXTENDS IDENTIFIER . LBRACE staticvardecls methoddecls RBRACE  (5)

	LBRACE  shift 13
	.  error


state 12
	classdecl : CLASS IDENTIFIER LBRACE staticvardecls . methoddecls RBRACE  (4)
	staticvardecls : staticvardecls . staticvardecl  (7)
	methoddecls : .  (13)

	IDENTIFIER  shift 14
	BOOLEAN  shift 15
	FLOAT  shift 16
	INT  shift 17
	STATIC  shift 18
	PUBLIC  reduce 13
	RBRACE  reduce 13

	methoddecls  goto 19
	staticvardecl  goto 20
	vardecl  goto 21
	exp_type  goto 22


state 13
	classdecl : CLASS IDENTIFIER EXTENDS IDENTIFIER LBRACE . staticvardecls methoddecls RBRACE  (5)
	staticvardecls : .  (6)

	.  reduce 6

	staticvardecls  goto 23


state 14
	exp_type : IDENTIFIER .  (24)

	.  reduce 24


state 15
	exp_type : BOOLEAN .  (21)

	.  reduce 21


state 16
	exp_type : FLOAT .  (22)

	.  reduce 22


state 17
	exp_type : INT .  (23)

	.  reduce 23


state 18
	staticvardecl : STATIC . vardecl  (9)

	IDENTIFIER  shift 14
	BOOLEAN  shift 15
	FLOAT  shift 16
	INT  shift 17
	.  error

	vardecl  goto 24
	exp_type  goto 22


state 19
	classdecl : CLASS IDENTIFIER LBRACE staticvardecls methoddecls . RBRACE  (4)
	methoddecls : methoddecls . methoddecl  (14)

	PUBLIC  shift 25
	RBRACE  shift 26
	.  error

	methoddecl  goto 27


state 20
	staticvardecls : staticvardecls staticvardecl .  (7)

	.  reduce 7


state 21
	staticvardecl : vardecl .  (8)

	.  reduce 8


state 22
	vardecl : exp_type . IDENTIFIER SEMICOLON  (12)

	IDENTIFIER  shift 28
	.  error


state 23
	classdecl : CLASS IDENTIFIER EXTENDS IDENTIFIER LBRACE staticvardecls . methoddecls RBRACE  (5)
	staticvardecls : staticvardecls . staticvardecl  (7)
	methoddecls : .  (13)

	IDENTIFIER  shift 14
	BOOLEAN  shift 15
	FLOAT  shift 16
	INT  shift 17
	STATIC  shift 18
	PUBLIC  reduce 13
	RBRACE  reduce 13

	methoddecls  goto 29
	staticvardecl  goto 20
	vardecl  goto 21
	exp_type  goto 22


state 24
	staticvardecl : STATIC vardecl .  (9)

	.  reduce 9


state 25
	methoddecl : PUBLIC . exp_type IDENTIFIER LPAREN params RPAREN LBRACE vardecls RETURN expression SEMICOLON RBRACE  (15)
	methoddecl : PUBLIC . exp_type IDENTIFIER LPAREN params RPAREN LBRACE vardecls stmts1 RETURN expression SEMICOLON RBRACE  (16)

	IDENTIFIER  shift 14
	BOOLEAN  shift 15
	FLOAT  shift 16
	INT  shift 17
	.  error

	exp_type  goto 30


state 26
	classdecl : CLASS IDENTIFIER LBRACE staticvardecls methoddecls RBRACE .  (4)

	.  reduce 4


state 27
	methoddecls : methoddecls methoddecl .  (14)

	.  reduce 14


state 28
	vardecl : exp_type IDENTIFIER . SEMICOLON  (12)

	SEMICOLON  shift 31
	.  error


state 29
	classdecl : CLASS IDENTIFIER EXTENDS IDENTIFIER LBRACE staticvardecls methoddecls . RBRACE  (5)
	methoddecls : methoddecls . methoddecl  (14)

	PUBLIC  shift 25
	RBRACE  shift 32
	.  error

	methoddecl  goto 27


state 30
	methoddecl : PUBLIC exp_type . IDENTIFIER LPAREN params RPAREN LBRACE vardecls RETURN expression SEMICOLON RBRACE  (15)
	methoddecl : PUBLIC exp_type . IDENTIFIER LPAREN params RPAREN LBRACE vardecls stmts1 RETURN expression SEMICOLON RBRACE  (16)

	IDENTIFIER  shift 33
	.  error


state 31
	vardecl : exp_type IDENTIFIER SEMICOLON .  (12)

	.  reduce 12


state 32
	classdecl : CLASS IDENTIFIER EXTENDS IDENTIFIER LBRACE staticvardecls methoddecls RBRACE .  (5)

	.  reduce 5


state 33
	methoddecl : PUBLIC exp_type IDENTIFIER . LPAREN params RPAREN LBRACE vardecls RETURN expression SEMICOLON RBRACE  (15)
	methoddecl : PUBLIC exp_type IDENTIFIER . LPAREN params RPAREN LBRACE vardecls stmts1 RETURN expression SEMICOLON RBRACE  (16)

	LPAREN  shift 34
	.  error


state 34
	methoddecl : PUBLIC exp_type IDENTIFIER LPAREN . params RPAREN LBRACE vardecls RETURN expression SEMICOLON RBRACE  (15)
	methoddecl : PUBLIC exp_type IDENTIFIER LPAREN . params RPAREN LBRACE vardecls stmts1 RETURN expression SEMICOLON RBRACE  (16)
	params : .  (17)

	IDENTIFIER  shift 14
	BOOLEAN  shift 15
	FLOAT  shift 16
	INT  shift 17
	RPAREN  reduce 17

	exp_type  goto 35
	params  goto 36


state 35
	params : exp_type . IDENTIFIER more_params  (18)

	IDENTIFIER  shift 37
	.  error


state 36
	methoddecl : PUBLIC exp_type IDENTIFIER LPAREN params . RPAREN LBRACE vardecls RETURN expression SEMICOLON RBRACE  (15)
	methoddecl : PUBLIC exp_type IDENTIFIER LPAREN params . RPAREN LBRACE vardecls stmts1 RETURN expression SEMICOLON RBRACE  (16)

	RPAREN  shift 38
	.  error


state 37
	params : exp_type IDENTIFIER . more_params  (18)
	more_params : .  (19)

	COMMA  shift 39
	RPAREN  reduce 19

	more_params  goto 40


state 38
	methoddecl : PUBLIC exp_type IDENTIFIER LPAREN params RPAREN . LBRACE vardecls RETURN expression SEMICOLON RBRACE  (15)
	methoddecl : PUBLIC exp_type IDENTIFIER LPAREN params RPAREN . LBRACE vardecls stmts1 RETURN expression SEMICOLON RBRACE  (16)

	LBRACE  shift 41
	.  error


state 39
	more_params : COMMA . exp_type IDENTIFIER more_params  (20)

	IDENTIFIER  shift 14
	BOOLEAN  shift 15
	FLOAT  shift 16
	INT  shift 17
	.  error

	exp_type  goto 42


state 40
	params : exp_type IDENTIFIER more_params .  (18)

	.  reduce 18


state 41
	methoddecl : PUBLIC exp_type IDENTIFIER LPAREN params RPAREN LBRACE . vardecls RETURN expression SEMICOLON RBRACE  (15)
	methoddecl : PUBLIC exp_type IDENTIFIER LPAREN params RPAREN LBRACE . vardecls stmts1 RETURN expression SEMICOLON RBRACE  (16)
	vardecls : .  (10)

	.  reduce 10

	vardecls  goto 43


state 42
	more_params : COMMA exp_type . IDENTIFIER more_params  (20)

	IDENTIFIER  shift 44
	.  error


state 43
	vardecls : vardecls . vardecl  (11)
	methoddecl : PUBLIC exp_type IDENTIFIER LPAREN params RPAREN LBRACE vardecls . RETURN expression SEMICOLON RBRACE  (15)
	methoddecl : PUBLIC exp_type IDENTIFIER LPAREN params RPAREN LBRACE vardecls . stmts1 RETURN expression SEMICOLON RBRACE  (16)

	IDENTIFIER  shift 45
	BOOLEAN  shift 15
	BREAK  shift 46
	CONTINUE  shift 47
	FLOAT  shift 16
	INT  shift 17
	IF  shift 48
	RETURN  shift 49
	WHILE  shift 50
	LBRACE  shift 51
	.  error

	vardecl  goto 52
	exp_type  goto 22
	stmts1  goto 53
	stmt  goto 54


state 44
	more_params : COMMA exp_type IDENTIFIER . more_params  (20)
	more_params : .  (19)

	COMMA  shift 39
	RPAREN  reduce 19

	more_params  goto 55


state 45
	exp_type : IDENTIFIER .  (24)
	stmt : IDENTIFIER . EQ expression SEMICOLON  (30)
	stmt : IDENTIFIER . DOT IDENTIFIER DOT IDENTIFIER LPAREN expression RPAREN SEMICOLON  (34)
	stmt : IDENTIFIER . LBRACK expression RBRACK EQ expression SEMICOLON  (37)

	LBRACK  shift 56
	DOT  shift 57
	EQ  shift 58
	IDENTIFIER  reduce 24


state 46
	stmt : BREAK . SEMICOLON  (35)

	SEMICOLON  shift 59
	.  error


state 47
	stmt : CONTINUE . SEMICOLON  (36)

	SEMICOLON  shift 60
	.  error


state 48
	stmt : IF . LPAREN expression RPAREN stmt ELSE stmt  (31)
	stmt : IF . LPAREN expression RPAREN stmt  (32)

	LPAREN  shift 61
	.  error


state 49
	methoddecl : PUBLIC exp_type IDENTIFIER LPAREN params RPAREN LBRACE vardecls RETURN . expression SEMICOLON RBRACE  (15)

	INTEGER_LITERAL  shift 62
	FLOAT_LITERAL  shift 63
	BOOLEAN_LITERAL  shift 64
	STRING_LITERAL  shift 65
	IDENTIFIER  shift 66
	NEW  shift 67
	THIS  shift 68
	NULL_LITERAL  shift 69
	LPAREN  shift 70
	NOT  shift 71
	.  error

	expression  goto 72


state 50
	stmt : WHILE . LPAREN expression RPAREN stmt  (33)

	LPAREN  shift 73
	.  error


state 51
	stmt : LBRACE . stmts0 RBRACE  (29)
	stmts0 : .  (27)

	.  reduce 27

	stmts0  goto 74


state 52
	vardecls : vardecls vardecl .  (11)

	.  reduce 11


state 53
	methoddecl : PUBLIC exp_type IDENTIFIER LPAREN params RPAREN LBRACE vardecls stmts1 . RETURN expression SEMICOLON RBRACE  (16)
	stmts1 : stmts1 . stmt  (26)

	IDENTIFIER  shift 75
	BREAK  shift 46
	CONTINUE  shift 47
	IF  shift 48
	RETURN  shift 76
	WHILE  shift 50
	LBRACE  shift 51
	.  error

	stmt  goto 77


state 54
	stmts1 : stmt .  (25)

	.  reduce 25


state 55
	more_params : COMMA exp_type IDENTIFIER more_params .  (20)

	.  reduce 20


state 56
	stmt : IDENTIFIER LBRACK . expression RBRACK EQ expression SEMICOLON  (37)

	INTEGER_LITERAL  shift 62
	FLOAT_LITERAL  shift 63
	BOOLEAN_LITERAL  shift 64
	STRING_LITERAL  shift 65
	IDENTIFIER  shift 66
	NEW  shift 67
	THIS  shift 68
	NULL_LITERAL  shift 69
	LPAREN  shift 70
	NOT  shift 71
	.  error

	expression  goto 78


state 57
	stmt : IDENTIFIER DOT . IDENTIFIER DOT IDENTIFIER LPAREN expression RPAREN SEMICOLON  (34)

	IDENTIFIER  shift 79
	.  error


state 58
	stmt : IDENTIFIER EQ . expression SEMICOLON  (30)

	INTEGER_LITERAL  shift 62
	FLOAT_LITERAL  shift 63
	BOOLEAN_LITERAL  shift 64
	STRING_LITERAL  shift 65
	IDENTIFIER  shift 66
	NEW  shift 67
	THIS  shift 68
	NULL_LITERAL  shift 69
	LPAREN  shift 70
	NOT  shift 71
	.  error

	expression  goto 80


state 59
	stmt : BREAK SEMICOLON .  (35)

	.  reduce 35


state 60
	stmt : CONTINUE SEMICOLON .  (36)

	.  reduce 36


state 61
	stmt : IF LPAREN . expression RPAREN stmt ELSE stmt  (31)
	stmt : IF LPAREN . expression RPAREN stmt  (32)

	INTEGER_LITERAL  shift 62
	FLOAT_LITERAL  shift 63
	BOOLEAN_LITERAL  shift 64
	STRING_LITERAL  shift 65
	IDENTIFIER  shift 66
	NEW  shift 67
	THIS  shift 68
	NULL_LITERAL  shift 69
	LPAREN  shift 70
	NOT  shift 71
	.  error

	expression  goto 81


state 62
	expression : INTEGER_LITERAL .  (51)

	.  reduce 51


state 63
	expression : FLOAT_LITERAL .  (52)

	.  reduce 52


state 64
	expression : BOOLEAN_LITERAL .  (55)

	.  reduce 55


state 65
	expression : STRING_LITERAL .  (53)

	.  reduce 53


state 66
	expression : IDENTIFIER .  (56)

	.  reduce 56


state 67
	expression : NEW . IDENTIFIER LPAREN RPAREN  (58)

	IDENTIFIER  shift 82
	.  error


state 68
	expression : THIS .  (57)

	.  reduce 57


state 69
	expression : NULL_LITERAL .  (54)

	.  reduce 54


state 70
	expression : LPAREN . expression RPAREN  (60)

	INTEGER_LITERAL  shift 62
	FLOAT_LITERAL  shift 63
	BOOLEAN_LITERAL  shift 64
	STRING_LITERAL  shift 65
	IDENTIFIER  shift 66
	NEW  shift 67
	THIS  shift 68
	NULL_LITERAL  shift 69
	LPAREN  shift 70
	NOT  shift 71
	.  error

	expression  goto 83


state 71
	expression : NOT . expression  (59)

	INTEGER_LITERAL  shift 62
	FLOAT_LITERAL  shift 63
	BOOLEAN_LITERAL  shift 64
	STRING_LITERAL  shift 65
	IDENTIFIER  shift 66
	NEW  shift 67
	THIS  shift 68
	NULL_LITERAL  shift 69
	LPAREN  shift 70
	NOT  shift 71
	.  error

	expression  goto 84


state 72
	methoddecl : PUBLIC exp_type IDENTIFIER LPAREN params RPAREN LBRACE vardecls RETURN expression . SEMICOLON RBRACE  (15)
	expression : expression . AND expression  (38)
	expression : expression . OR expression  (39)
	expression : expression . LT expression  (40)
	expression : expression . GT expression  (41)
	expression : expression . EQEQ expression  (42)
	expression : expression . LTEQ expression  (43)
	expression : expression . GTEQ expression  (44)
	expression : expression . PLUS expression  (45)
	expression : expression . MINUS expression  (46)
	expression : expression . MULT expression  (47)
	expression : expression . DIV expression  (48)
	expression : expression . DOT IDENTIFIER  (49)
	expression : expression . DOT IDENTIFIER LPAREN args RPAREN  (50)

	SEMICOLON  shift 85
	DOT  shift 86
	LT  shift 87
	GT  shift 88
	EQEQ  shift 89
	LTEQ  shift 90
	GTEQ  shift 91
	PLUS  shift 92
	MINUS  shift 93
	MULT  shift 94
	DIV  shift 95
	AND  shift 96
	OR  shift 97
	.  error


state 73
	stmt : WHILE LPAREN . expression RPAREN stmt  (33)

	INTEGER_LITERAL  shift 62
	FLOAT_LITERAL  shift 63
	BOOLEAN_LITERAL  shift 64
	STRING_LITERAL  shift 65
	IDENTIFIER  shift 66
	NEW  shift 67
	THIS  shift 68
	NULL_LITERAL  shift 69
	LPAREN  shift 70
	NOT  shift 71
	.  error

	expression  goto 98


state 74
	stmts0 : stmts0 . stmt  (28)
	stmt : LBRACE stmts0 . RBRACE  (29)

	IDENTIFIER  shift 75
	BREAK  shift 46
	CONTINUE  shift 47
	IF  shift 48
	WHILE  shift 50
	LBRACE  shift 51
	RBRACE  shift 99
	.  error

	stmt  goto 100


state 75
	stmt : IDENTIFIER . EQ expression SEMICOLON  (30)
	stmt : IDENTIFIER . DOT IDENTIFIER DOT IDENTIFIER LPAREN expression RPAREN SEMICOLON  (34)
	stmt : IDENTIFIER . LBRACK expression RBRACK EQ expression SEMICOLON  (37)

	LBRACK  shift 56
	DOT  shift 57
	EQ  shift 58
	.  error


state 76
	methoddecl : PUBLIC exp_type IDENTIFIER LPAREN params RPAREN LBRACE vardecls stmts1 RETURN . expression SEMICOLON RBRACE  (16)

	INTEGER_LITERAL  shift 62
	FLOAT_LITERAL  shift 63
	BOOLEAN_LITERAL  shift 64
	STRING_LITERAL  shift 65
	IDENTIFIER  shift 66
	NEW  shift 67
	THIS  shift 68
	NULL_LITERAL  shift 69
	LPAREN  shift 70
	NOT  shift 71
	.  error

	expression  goto 101


state 77
	stmts1 : stmts1 stmt .  (26)

	.  reduce 26


state 78
	stmt : IDENTIFIER LBRACK expression . RBRACK EQ expression SEMICOLON  (37)
	expression : expression . AND expression  (38)
	expression : expression . OR expression  (39)
	expression : expression . LT expression  (40)
	expression : expression . GT expression  (41)
	expression : expression . EQEQ expression  (42)
	expression : expression . LTEQ expression  (43)
	expression : expression . GTEQ expression  (44)
	expression : expression . PLUS expression  (45)
	expression : expression . MINUS expression  (46)
	expression : expression . MULT expression  (47)
	expression : expression . DIV expression  (48)
	expression : expression . DOT IDENTIFIER  (49)
	expression : expression . DOT IDENTIFIER LPAREN args RPAREN  (50)

	RBRACK  shift 102
	DOT  shift 86
	LT  shift 87
	GT  shift 88
	EQEQ  shift 89
	LTEQ  shift 90
	GTEQ  shift 91
	PLUS  shift 92
	MINUS  shift 93
	MULT  shift 94
	DIV  shift 95
	AND  shift 96
	OR  shift 97
	.  error


state 79
	stmt : IDENTIFIER DOT IDENTIFIER . DOT IDENTIFIER LPAREN expression RPAREN SEMICOLON  (34)

	DOT  shift 103
	.  error


state 80
	stmt : IDENTIFIER EQ expression . SEMICOLON  (30)
	expression : expression . AND expression  (38)
	expression : expression . OR expression  (39)
	expression : expression . LT expression  (40)
	expression : expression . GT expression  (41)
	expression : expression . EQEQ expression  (42)
	expression : expression . LTEQ expression  (43)
	expression : expression . GTEQ expression  (44)
	expression : expression . PLUS expression  (45)
	expression : expression . MINUS expression  (46)
	expression : expression . MULT expression  (47)
	expression : expression . DIV expression  (48)
	expression : expression . DOT IDENTIFIER  (49)
	expression : expression . DOT IDENTIFIER LPAREN args RPAREN  (50)

	SEMICOLON  shift 104
	DOT  shift 86
	LT  shift 87
	GT  shift 88
	EQEQ  shift 89
	LTEQ  shift 90
	GTEQ  shift 91
	PLUS  shift 92
	MINUS  shift 93
	MULT  shift 94
	DIV  shift 95
	AND  shift 96
	OR  shift 97
	.  error


state 81
	stmt : IF LPAREN expression . RPAREN stmt ELSE stmt  (31)
	stmt : IF LPAREN expression . RPAREN stmt  (32)
	expression : expression . AND expression  (38)
	expression : expression . OR expression  (39)
	expression : expression . LT expression  (40)
	expression : expression . GT expression  (41)
	expression : expression . EQEQ expression  (42)
	expression : expression . LTEQ expression  (43)
	expression : expression . GTEQ expression  (44)
	expression : expression . PLUS expression  (45)
	expression : expression . MINUS expression  (46)
	expression : expression . MULT expression  (47)
	expression : expression . DIV expression  (48)
	expression : expression . DOT IDENTIFIER  (49)
	expression : expression . DOT IDENTIFIER LPAREN args RPAREN  (50)

	RPAREN  shift 105
	DOT  shift 86
	LT  shift 87
	GT  shift 88
	EQEQ  shift 89
	LTEQ  shift 90
	GTEQ  shift 91
	PLUS  shift 92
	MINUS  shift 93
	MULT  shift 94
	DIV  shift 95
	AND  shift 96
	OR  shift 97
	.  error


state 82
	expression : NEW IDENTIFIER . LPAREN RPAREN  (58)

	LPAREN  shift 106
	.  error


state 83
	expression : expression . AND expression  (38)
	expression : expression . OR expression  (39)
	expression : expression . LT expression  (40)
	expression : expression . GT expression  (41)
	expression : expression . EQEQ expression  (42)
	expression : expression . LTEQ expression  (43)
	expression : expression . GTEQ expression  (44)
	expression : expression . PLUS expression  (45)
	expression : expression . MINUS expression  (46)
	expression : expression . MULT expression  (47)
	expression : expression . DIV expression  (48)
	expression : expression . DOT IDENTIFIER  (49)
	expression : expression . DOT IDENTIFIER LPAREN args RPAREN  (50)
	expression : LPAREN expression . RPAREN  (60)

	RPAREN  shift 107
	DOT  shift 86
	LT  shift 87
	GT  shift 88
	EQEQ  shift 89
	LTEQ  shift 90
	GTEQ  shift 91
	PLUS  shift 92
	MINUS  shift 93
	MULT  shift 94
	DIV  shift 95
	AND  shift 96
	OR  shift 97
	.  error


state 84
	expression : expression . AND expression  (38)
	expression : expression . OR expression  (39)
	expression : expression . LT expression  (40)
	expression : expression . GT expression  (41)
	expression : expression . EQEQ expression  (42)
	expression : expression . LTEQ expression  (43)
	expression : expression . GTEQ expression  (44)
	expression : expression . PLUS expression  (45)
	expression : expression . MINUS expression  (46)
	expression : expression . MULT expression  (47)
	expression : expression . DIV expression  (48)
	expression : expression . DOT IDENTIFIER  (49)
	expression : expression . DOT IDENTIFIER LPAREN args RPAREN  (50)
	expression : NOT expression .  (59)

	DOT  shift 86
	RPAREN  reduce 59
	RBRACK  reduce 59
	SEMICOLON  reduce 59
	COMMA  reduce 59
	LT  reduce 59
	GT  reduce 59
	EQEQ  reduce 59
	LTEQ  reduce 59
	GTEQ  reduce 59
	PLUS  reduce 59
	MINUS  reduce 59
	MULT  reduce 59
	DIV  reduce 59
	AND  reduce 59
	OR  reduce 59


state 85
	methoddecl : PUBLIC exp_type IDENTIFIER LPAREN params RPAREN LBRACE vardecls RETURN expression SEMICOLON . RBRACE  (15)

	RBRACE  shift 108
	.  error


state 86
	expression : expression DOT . IDENTIFIER  (49)
	expression : expression DOT . IDENTIFIER LPAREN args RPAREN  (50)

	IDENTIFIER  shift 109
	.  error


state 87
	expression : expression LT . expression  (40)

	INTEGER_LITERAL  shift 62
	FLOAT_LITERAL  shift 63
	BOOLEAN_LITERAL  shift 64
	STRING_LITERAL  shift 65
	IDENTIFIER  shift 66
	NEW  shift 67
	THIS  shift 68
	NULL_LITERAL  shift 69
	LPAREN  shift 70
	NOT  shift 71
	.  error

	expression  goto 110


state 88
	expression : expression GT . expression  (41)

	INTEGER_LITERAL  shift 62
	FLOAT_LITERAL  shift 63
	BOOLEAN_LITERAL  shift 64
	STRING_LITERAL  shift 65
	IDENTIFIER  shift 66
	NEW  shift 67
	THIS  shift 68
	NULL_LITERAL  shift 69
	LPAREN  shift 70
	NOT  shift 71
	.  error

	expression  goto 111


state 89
	expression : expression EQEQ . expression  (42)
